name:                blogination
version:             0.0.0
synopsis:            Statically generating blog software.
description:         Statically generating blog software.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2013 Chris Done
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Blogination
  build-depends:     base >= 4 && <5

executable blogination
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
